# sequencer24

./: .gitignore  ChangeLog  INSTALL  Makefile.am  README  ROADMAP  SEQ24  TODO  bootstrap  configure.ac  configure.help  dependencies.list  git-sequencer24.txt  pack  strap_functions
contrib/: HOME.gitignore  README  b4-parse-notes.txt  b4uacuse-seq24.asc  config.backup  cscope.files  fix.sed  git.txt  ideas.txt  keyboard-control.txt  oxref.txt  pad  profile.txt  sequencer24-classes.ods
contrib/OMA/: README  dot-abf.yml  seq24-fix-jacksession.patch  seq24.spec
contrib/WPB/: wpb-yoshimi-crash.txt  wpb_yoshimi-buss-0.asc  wpb_yoshimi-buss-5.asc  wpb_yoshimi-buss-5.midi  wpb_yoshimi.asc  wpb_yoshimi.midi  wpb_yoshimi.txt
contrib/freddix/: README  seq24-jack-transport.patch  seq24.spec
contrib/m4/: README
contrib/pld-linux/: README  seq24.desktop  seq24.spec  sigc22-fix.patch
debian/: README  changelog  control  copyright  install  menu  seq24.desktop  sequencer24.desktop  watch
doc/: options-storage.txt  sequence-list.txt  sequencer24-classes.ods  uml.txt
doc/dia/: perform.dia  sequence.dia
doc/dox/: Makefile.am  doxy-reference.cfg  license.dox  mainpage-reference.dox  make_dox
m4/: Makefile.am  README
man/: Makefile.am  sequencer24.1
src/: Makefile.am  config.h.in  configfile.cpp  configfile.h  configwin32.h  controllers.h  easy_macros.cpp  easy_macros.h  event.cpp  event.h  font.cpp  font.h  fruityseq.cpp  fruityseq.h  fruityseqroll.cpp  fruityseqroll.h  globals.cpp  globals.h  gtk_helpers.h  keybindentry.cpp  keybindentry.h  lash.cpp  lash.h  maintime.cpp  maintime.h  mainwid.cpp  mainwid.h  mainwnd.cpp  mainwnd.h  mastermidibus.cpp  mastermidibus.h  mastermidibus_portmidi.cpp  mastermidibus_portmidi.h  midibus.cpp  midibus.h  midibus_common.h  midibus_portmidi.cpp  midibus_portmidi.h  midifile.cpp  midifile.h  (+44 more)
src/junk/: sequence_dead.cpp
src/old/: mastermidibus_win_init.cpp
src/pixmaps/: Makefile.am  sequencer24_square.xpm
